# SDL2_Particle_Simulation

./: CMakeLists.txt  README.md
include/: Particle.h  Swarm.h
src/: Particle.cpp  Screen.cpp  Swarm.cpp  main.cpp
